--- a/index.html
+++ b/index.html
@@ -925,3 +925,198 @@
                     <p><strong>Telegram Gaming Ecosystem Leadership</strong></p>
                     <p>Successfully navigated and optimized participation across major gaming platforms including X Empire, Hamster Combat, Dogs, and Tomarket. Deep understanding of tokenomics, user retention strategies, and community engagement in gaming environments.</p>
                     <div class="tags">
+ <div class="tags">
+                        <span class="tag">Community Building</span>
+                        <span class="tag">User Acquisition</span>
+                        <span class="tag">Tokenomics</span>
+                        <span class="tag">Social Gaming</span>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">🪂</div>
+                    <h3>Airdrop Strategy & Distribution</h3>
+                    <p><strong>Multi-Chain Airdrop Campaign Expert</strong></p>
+                    <p>Successfully participated in and analyzed 20+ major airdrop campaigns including Notcoin, Mnemonics, Dogs, and others. Expertise in eligibility optimization, distribution mechanics, and community sentiment analysis during token launches.</p>
+                    <div class="tags">
+                        <span class="tag">Token Distribution</span>
+                        <span class="tag">Multi-Chain</span>
+                        <span class="tag">Market Research</span>
+                        <span class="tag">Launch Strategy</span>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">🔗</div>
+                    <h3>Infrastructure & Network Participation</h3>
+                    <p><strong>Decentralized Infrastructure Contributor</strong></p>
+                    <p>Active participant in network infrastructure projects including Nodepay, Grass, and Hot Wallet. Understanding of decentralized network economics, node operations, and passive earning mechanisms in Web3 infrastructure.</p>
+                    <div class="tags">
+                        <span class="tag">Network Effects</span>
+                        <span class="tag">Infrastructure</span>
+                        <span class="tag">Passive Income</span>
+                        <span class="tag">Node Operations</span>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">❄️</div>
+                    <h3>Ecosystem Integration Specialist</h3>
+                    <p><strong>ICE Network Ecosystem Expert</strong></p>
+                    <p>Deep involvement in interconnected ICE ecosystem projects including Sauces, Callfluent, and Sunwaves. Expertise in managing multi-project portfolios, cross-platform integrations, and ecosystem-wide tokenomics optimization.</p>
+                    <div class="tags">
+                        <span class="tag">Ecosystem Design</span>
+                        <span class="tag">Cross-Platform</span>
+                        <span class="tag">Portfolio Management</span>
+                        <span class="tag">Integration</span>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">⚡</div>
+                    <h3>Beta Testing & Product Development</h3>
+                    <p><strong>Pre-Launch Project Specialist</strong></p>
+                    <p>Currently active in multiple pre-launch projects including Bless, Blum, and various testnets. Experienced in providing product feedback, identifying bugs, and helping shape user experience during critical development phases.</p>
+                    <div class="tags">
+                        <span class="tag">Beta Testing</span>
+                        <span class="tag">Product Feedback</span>
+                        <span class="tag">UX Research</span>
+                        <span class="tag">Quality Assurance</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="skills">
+        <div class="container">
+            <h2 class="section-title">Technical & Professional Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h3>🔐 Blockchain & DeFi</h3>
+                    <div class="skill-list">
+                        <span class="skill-tag">Wallet Management</span>
+                        <span class="skill-tag">Smart Contracts</span>
+                        <span class="skill-tag">DeFi Protocols</span>
+                        <span class="skill-tag">Cross-Chain</span>
+                        <span class="skill-tag">Yield Farming</span>
+                        <span class="skill-tag">Liquidity Mining</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>💼 Business & Strategy</h3>
+                    <div class="skill-list">
+                        <span class="skill-tag">Tokenomics Design</span>
+                        <span class="skill-tag">Market Research</span>
+                        <span class="skill-tag">Community Strategy</span>
+                        <span class="skill-tag">Partnership Development</span>
+                        <span class="skill-tag">Go-to-Market</span>
+                        <span class="skill-tag">Product Strategy</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>👥 Community & Growth</h3>
+                    <div class="skill-list">
+                        <span class="skill-tag">Community Building</span>
+                        <span class="skill-tag">Social Media</span>
+                        <span class="skill-tag">Content Creation</span>
+                        <span class="skill-tag">Event Management</span>
+                        <span class="skill-tag">User Education</span>
+                        <span class="skill-tag">Ambassador Programs</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>🛠️ Technical Operations</h3>
+                    <div class="skill-list">
+                        <span class="skill-tag">Beta Testing</span>
+                        <span class="skill-tag">Bug Reporting</span>
+                        <span class="skill-tag">User Research</span>
+                        <span class="skill-tag">Data Analysis</span>
+                        <span class="skill-tag">Documentation</span>
+                        <span class="skill-tag">Quality Assurance</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="stats">
+        <div class="container">
+            <h2 class="section-title">Impact & Experience</h2>
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <span class="stat-number">15+</span>
+                    <p class="stat-label">Active Web3 Projects</p>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number">20+</span>
+                    <p class="stat-label">Successful Airdrops</p>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number">5+</span>
+                    <p class="stat-label">Ecosystems Mastered</p>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number">24/7</span>
+                    <p class="stat-label">Market Monitoring</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="container">
+            <h2 class="section-title">Case Studies & Solutions</h2>
+            <div class="cards-grid">
+                <div class="card">
+                    <h3>Multi-Ecosystem Portfolio Optimization</h3>
+                    <p><strong>Challenge:</strong> Managing complex multi-project participation across different blockchain ecosystems with varying reward mechanisms and timelines.</p>
+                    <p><strong>Solution:</strong> Developed systematic approach to portfolio management, risk assessment, and opportunity prioritization across 15+ concurrent projects.</p>
+                    <p><strong>Impact:</strong> Maximized rewards while minimizing time investment and reducing exposure to failed projects.</p>
+                </div>
+                <div class="card">
+                    <h3>Early Stage Project Evaluation</h3>
+                    <p><strong>Challenge:</strong> Identifying promising pre-launch projects in a crowded market with high failure rates.</p>
+                    <p><strong>Solution:</strong> Created evaluation framework focusing on team credentials, tokenomics sustainability, and market fit analysis.</p>
+                    <p><strong>Impact:</strong> Successfully identified multiple projects that later achieved significant success and user adoption.</p>
+                </div>
+                <div class="card">
+                    <h3>Community Onboarding & Education</h3>
+                    <p><strong>Challenge:</strong> High complexity barriers preventing mainstream users from participating in Web3 opportunities.</p>
+                    <p><strong>Solution:</strong> Developed simplified guides, educational content, and step-by-step onboarding processes for various platforms.</p>
+                    <p><strong>Impact:</strong> Reduced user onboarding time and improved success rates for new Web3 participants.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <h2 class="section-title">Ready to Collaborate</h2>
+            <form class="contact-form">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="company">Company/Project</label>
+                    <input type="text" id="company" name="company">
+                </div>
+                <div class="form-group">
+                    <label for="role">Role/Opportunity</label>
+                    <select id="role" name="role">
+                        <option value="">Select opportunity type</option>
+                        <option value="community">Community Management</option>
+                        <option value="product">Product Development</option>
+                        <option value="marketing">Marketing & Growth</option>
+                        <option value="strategy">Strategic Consulting</option>
+                        <option value="partnerships">Business Development</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="message">Project Details</label>
+                    <textarea id="message" name="message" rows="5" placeholder="Tell me about your project and how I can contribute..."></textarea>
+                </div>
+                <button type="submit" class="submit-btn">Send Message</button>
+            </form>                
