--- a/index.html
+++ b/index.html
@@ -917,75 +917,141 @@
 
     <section id="experience">
         <div class="container">
-            <h2 class="section-title">Hands-On Web3 Experience</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-icon">🎮</div>
-                    <h3>GameFi & Social Gaming</h3>
-                    <p><strong>Telegram Gaming Ecosystem Leadership</strong></p>
-                    <p>Successfully navigated and optimized participation across major gaming platforms including X Empire, Hamster Combat, Dogs, and Tomarket. Deep understanding of tokenomics, user retention strategies, and community engagement in gaming environments.</p>
-                    <div class="tags">
-                         <div class="tags">
-                        <span class="tag">Community Building</span>
-                        <span class="tag">User Acquisition</span>
-                        <span class="tag">Tokenomics</span>
-                        <span class="tag">Social Gaming</span>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">🪂</div>
-                    <h3>Airdrop Strategy & Distribution</h3>
-                    <p><strong>Multi-Chain Airdrop Campaign Expert</strong></p>
-                    <p>Successfully participated in and analyzed 20+ major airdrop campaigns including Notcoin, Mnemonics, Dogs, and others. Expertise in eligibility optimization, distribution mechanics, and community sentiment analysis during token launches.</p>
-                    <div class="tags">
-                        <span class="tag">Token Distribution</span>
-                        <span class="tag">Multi-Chain</span>
-                        <span class="tag">Market Research</span>
-                        <span class="tag">Launch Strategy</span>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">🔗</div>
-                    <h3>Infrastructure & Network Participation</h3>
-                    <p><strong>Decentralized Infrastructure Contributor</strong></p>
-                    <p>Active participant in network infrastructure projects including Nodepay, Grass, and Hot Wallet. Understanding of decentralized network economics, node operations, and passive earning mechanisms in Web3 infrastructure.</p>
-                    <div class="tags">
-                        <span class="tag">Network Effects</span>
-                        <span class="tag">Infrastructure</span>
-                        <span class="tag">Passive Income</span>
-                        <span class="tag">Node Operations</span>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">❄️</div>
-                    <h3>Ecosystem Integration Specialist</h3>
-                    <p><strong>ICE Network Ecosystem Expert</strong></p>
-                    <p>Deep involvement in interconnected ICE ecosystem projects including Sauces, Callfluent, and Sunwaves. Expertise in managing multi-project portfolios, cross-platform integrations, and ecosystem-wide tokenomics optimization.</p>
-                    <div class="tags">
-                        <span class="tag">Ecosystem Design</span>
-                        <span class="tag">Cross-Platform</span>
-                        <span class="tag">Portfolio Management</span>
-                        <span class="tag">Integration</span>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-icon">⚡</div>
-                    <h3>Beta Testing & Product Development</h3>
-                    <p><strong>Pre-Launch Project Specialist</strong></p>
-                    <p>Currently active in multiple pre-launch projects including Bless, Blum, and various testnets. Experienced in providing product feedback, identifying bugs, and helping shape user experience during critical development phases.</p>
-                    <div class="tags">
-                        <span class="tag">Beta Testing</span>
-                        <span class="tag">Product Feedback</span>
-                        <span class="tag">UX Research</span>
-                        <span class="tag">Quality Assurance</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+           <section id="experience">
+  <style>
+    #experience {
+      padding: 60px 20px;
+      background: #0f0f20;
+      color: #ffffff;
+    }
 
-    <section id="skills">
-        <div class="container">
+    .section-title {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 40px;
+      border-bottom: 2px solid #4ef0ff;
+      display: inline-block;
+      padding-bottom: 10px;
+    }
+
+    .experience-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+    }
+
+    .experience-card {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 20px;
+      border-radius: 12px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      transition: transform 0.3s ease;
+    }
+
+    .experience-card:hover {
+      transform: translateY(-5px);
+    }
+
+    .icon {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+    .tags {
+      margin-top: 15px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+    }
+
+    .tag {
+      background: #4ef0ff;
+      color: #0f0f20;
+      padding: 5px 10px;
+      border-radius: 20px;
+      font-size: 0.8rem;
+    }
+  </style>
+
+  <div class="container">
+    <h2 class="section-title">Hands-On Web3 Experience</h2>
+    <div class="experience-grid">
+
+      <!-- Experience Card -->
+      <div class="experience-card">
+        <div class="icon">🎮</div>
+        <h3>GameFi & Social Gaming</h3>
+        <p><strong>Telegram Gaming Ecosystem Leadership</strong></p>
+        <p>Successfully navigated and optimized participation across major gaming platforms including X Empire, Hamster Combat, Dogs, and Tomarket. Deep understanding of tokenomics, user retention strategies, and community engagement in gaming environments.</p>
+        <div class="tags">
+          <span class="tag">Community Building</span>
+          <span class="tag">User Acquisition</span>
+          <span class="tag">Tokenomics</span>
+          <span class="tag">Social Gaming</span>
+        </div>
+      </div>
+
+      <!-- Experience Card -->
+      <div class="experience-card">
+        <div class="icon">🪂</div>
+        <h3>Airdrop Strategy & Distribution</h3>
+        <p><strong>Multi-Chain Airdrop Campaign Expert</strong></p>
+        <p>Successfully participated in and analyzed 20+ major airdrop campaigns including Notcoin, Mnemonics, Dogs, and others. Expertise in eligibility optimization, distribution mechanics, and community sentiment analysis during token launches.</p>
+        <div class="tags">
+          <span class="tag">Token Distribution</span>
+          <span class="tag">Multi-Chain</span>
+          <span class="tag">Market Research</span>
+          <span class="tag">Launch Strategy</span>
+        </div>
+      </div>
+
+      <!-- Experience Card -->
+      <div class="experience-card">
+        <div class="icon">🔗</div>
+        <h3>Infrastructure & Network Participation</h3>
+        <p><strong>Decentralized Infrastructure Contributor</strong></p>
+        <p>Active participant in network infrastructure projects including Nodepay, Grass, and Hot Wallet. Understanding of decentralized network economics, node operations, and passive earning mechanisms in Web3 infrastructure.</p>
+        <div class="tags">
+          <span class="tag">Network Effects</span>
+          <span class="tag">Infrastructure</span>
+          <span class="tag">Passive Income</span>
+          <span class="tag">Node Operations</span>
+        </div>
+      </div>
+
+      <!-- Experience Card -->
+      <div class="experience-card">
+        <div class="icon">❄️</div>
+        <h3>Ecosystem Integration Specialist</h3>
+        <p><strong>ICE Network Ecosystem Expert</strong></p>
+        <p>Deep involvement in interconnected ICE ecosystem projects including Sauces, Callfluent, and Sunwaves. Expertise in managing multi-project portfolios, cross-platform integrations, and ecosystem-wide tokenomics optimization.</p>
+        <div class="tags">
+          <span class="tag">Ecosystem Design</span>
+          <span class="tag">Cross-Platform</span>
+          <span class="tag">Portfolio Management</span>
+          <span class="tag">Integration</span>
+        </div>
+      </div>
+
+      <!-- Experience Card -->
+      <div class="experience-card">
+        <div class="icon">⚡</div>
+        <h3>Beta Testing & Product Development</h3>
+        <p><strong>Pre-Launch Project Specialist</strong></p>
+        <p>Currently active in multiple pre-launch projects including Bless, Blum, and various testnets. Experienced in providing product feedback, identifying bugs, and helping shape user experience during critical development phases.</p>
+        <div class="tags">
+          <span class="tag">Beta Testing</span>
+          <span class="tag">Product Feedback</span>
+          <span class="tag">UX Research</span>
+          <span class="tag">Quality Assurance</span>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
             <h2 class="section-title">Technical & Professional Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
