--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abayomi Fajuyitan | Web3 Professional Portfolio</title>
+    <link rel="icon" href="https://cryptologos.cc/logos/web3-token-web3-logo.png?v=023" type="image/png">
     <style>
         * {
             margin: 0;
