--- a/index.html
+++ b/index.html
@@ -864,10 +864,10 @@
                     </div>
                     <div class="contact-item">
                         <span>📱</span>
-                        <a href="tel:+1234567890">+234 813 6793 274</a>
+                        <a href="tel:+1234567890">+234 813 679 3274</a>
                     </div>
                     <div class="contact-item">
-                        <span>🐦</span>
+                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/X_logo_2023.svg/20px-X_logo_2023.svg.png" alt="Twitter" width="20" height="20" style="vertical-align:middle; margin-right: 5px;">
                         <a href="https://x.com/dgidinoni?s=21" target="_blank">@dgidinoni</a>
                     </div>
                 </div>
