--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                         <a href="tel:+1234567890">+234 813 679 3274</a>
                     </div>
                     <div class="contact-item">
-                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/X_logo_2023.svg/20px-X_logo_2023.svg.png" alt="Twitter" width="20" height="20" style="vertical-align:middle; margin-right: 5px;">
+                       <span style="font-weight: bold; font-size: 18px;">𝕏</span>
                         <a href="https://x.com/dgidinoni?s=21" target="_blank">@dgidinoni</a>
                     </div>
                 </div>
