--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                         <a href="tel:+1234567890">+234 813 679 3274</a>
                     </div>
                     <div class="contact-item">
-                       <span style="font-weight: bold; font-size: 18px;">𝕏</span>
+                       <span>🐦</span>
                         <a href="https://x.com/dgidinoni?s=21" target="_blank">@dgidinoni</a>
                     </div>
                 </div>
