--- a/index.html
+++ b/index.html
@@ -1724,8 +1724,8 @@
 
     <section id="about">
         <div class="container">
-            <h2 class="section-title">Why Hire Me</h2>
-            <div class="cards-grid">
+            <h2 class="section-title" style="text-align: center;">Why Hire Me</h2>
+            <div class="cards-grid" style="display: grid; place-items: center;">
                 <div class="card">
                     <div class="card-icon">🚀</div>
                     <h3>Early Adopter & Trend Spotter</h3>
